Bug 1722782 - Re-enable but deprecate WEBGL_debug_renderer_info. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D121149